--- a/content/post/2021-01-04-r-inter/index.en.Rmd
+++ b/content/post/2021-01-04-r-inter/index.en.Rmd
@@ -10,6 +10,8 @@ tags:
 image: "77_cover_m.jpg"
 ---
 
+Last compiled on `r format(Sys.time(), '%d %B, %Y')`
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(collapse = TRUE)
 ```
@@ -57,8 +59,37 @@ check_input("n")
 check_input("a")
 ```
 
+## 复制——修改机制
 
+复制修改机制指的是：当有多个变量指向同一个对象，那么修改一个变量(包括值和属性)就会生成该对象的一个副本
 
+我们可以看一个例子：
 
+```{r ex1}
+x1 <- c(1,2,3)
+x2 <- x1
 
+##使用tracemem可以追踪变量的内存地址
+tracemem(x1)
+tracemem(x2)
+
+x1[1] <- 0
+```
+
+可以看到在赋值操作中变量所指向的内存地址是一样的，但是在改变其中一个变量的值的时候，该变量的内存地址发生了变化，也就是说修改操作会生成一个副本，然后在该副本上进行修改
+
+对于函数的参数也是这样，当我们传一个变量给函数的参数时，就相当于该变量和函数参数所表示的变量都指向我们传入的数据，所以在函数内部进行修改时并不会修改传入的变量:
+
+```{r ex2}
+modify <- function(x){
+  x[1] <- 2
+  x
+}
+
+v1 <- c(1,2,3)
+modify(v1)
+v1
+```
+
+## 词法作用域
 
