--- a/content/post/2021-01-04-r-inter/index.en.Rmd
+++ b/content/post/2021-01-04-r-inter/index.en.Rmd
@@ -78,7 +78,7 @@ x1[1] <- 0
 
 可以看到在赋值操作中变量所指向的内存地址是一样的，但是在改变其中一个变量的值的时候，该变量的内存地址发生了变化，也就是说修改操作会生成一个副本，然后在该副本上进行修改
 
-对于函数的参数也是这样，当我们传一个变量给函数的参数时，就相当于该变量和函数参数所表示的变量都指向我们传入的数据，所以在函数内部进行修改时并不会修改传入的变量:
+对于函数的参数也是这样，当我们传一个变量给函数的参数时，就相当于该变量和函数参数所表示的变量都指向我们传入的数据，所以在函数内部进行修改时并不会修改传入的变量，而是将该变量的值复制后再进行修改:
 
 ```{r ex2}
 modify <- function(x){
@@ -92,4 +92,67 @@ v1
 ```
 
 ## 词法作用域
+
+本节中有几个知识点：
+
+1. 函数只有在被调用的时候才寻找变量：
+
+```{r ex3,error=TRUE}
+##定义函数
+fun1 <- function(x){
+  c(a,x,b)
+}
+#现在并没有定义a和b,但是创建函数时不会报错
+
+fun1(1)
+##由于调用函数时找不到相应的变量所以报错
+
+a <- b <- 1
+fun1(1)
+```
+
+2. 当函数被调用时，先会在函数内部搜索变量，如果在内部找不到相应的变量，就会在自己被定义的地方(所在的域或者环境)而不是被调用的地方搜索相应的变量----**词法作用域** 
+
+```{r ex4,error=TRUE}
+f1 <- function(x){
+  x + p 
+}
+
+g1 <- function(x){
+  p <- 1 
+  f1(x)
+}
+
+g1(0)
+##在g1内部调用f1，f1先在其内部找p，找不到；接着f1到其被定义的域/环境中找p，也找不到(因为p是在g1内部被定义的)，所以会报错
+
+p <- 1
+g1(0)
+##在g1内部调用f1，f1先在其内部找p，找不到；接着f1到其被定义的域/环境中找p,这时就可以找到了
+```
+
+接下来看一个有意思的例子：
+
+```{r ex5}
+f1 <- function(x){
+  p <- 1
+  q <- 2
+  cat(sprintf("1. [f1] p: %d, q: %d\n",p,q))
+  f2 <- function(x){
+    p <- 3
+    cat(sprintf("2. [f2] p: %d, q: %d\n",p,q))
+    c(x=x, p=p, q=q)
+  }
+  cat(sprintf("3. [f1] p: %d, q: %d",p,q))
+  f2(x)
+}
+
+f1(0)
+
+##注意运行的顺序和展示的值
+```
+
+
+
+## 环境的工作方式
 
