--- a/content/post/2021-01-04-r-inter/index.en.Rmd
+++ b/content/post/2021-01-04-r-inter/index.en.Rmd
@@ -13,7 +13,7 @@ image: "77_cover_m.jpg"
 Last compiled on `r format(Sys.time(), '%d %B, %Y')`
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(collapse = TRUE)
+knitr::opts_chunk$set(collapse = TRUE,comment=">>")
 ```
 
 本章主要是学习四个方面：
@@ -153,6 +153,144 @@ f1(0)
 ```
 
 
-
 ## 环境的工作方式
+
+环境是一组名称组成的对象，每个名称(变量)都指向一个对象，并且每个环境(除了空环境)都要一个父环境，当我们寻找某个名称的时候会沿着“环境链”进行搜索
+
+我们可以通过`new.env`来创建新环境，通过$和[]来在新环境中创建变量(和列表操作类似)
+
+```{r ex6}
+e1 <- new.env()
+e1
+##环境是用内存地址来表示
+
+##创建变量
+e1$x <- 1
+e1[["y"]] <- 2
+```
+
+但是在访问变量的时候，环境不能像列表那样通过索引来提取元素：
+
+```{r ex7,error=TRUE}
+e1[[1]]
+e1[1:2]
+
+```
+
+可以通过使用变量的名称或者专门的函数(exist/get/ls)来访问环境中的变量：
+
+```{r ex8}
+e1[["x"]]
+
+exists("x",e1) ##exist判断某个变量是否在环境中
+get("x",e1)##get从环境中获取相应的对象
+ls(e1)##ls查看环境中所有变量
+```
+
+环境还有两个重要的特征：
+
+- 环境有父环境
+- 环境有引用语义
+
+### 链接环境
+
+环境有父环境，当我们寻找一个变量的时候，在当前环境中找不到就会去父环境中寻找
+在创建环境时可以指定其父环境：
+
+```{r ex9}
+e2 <- new.env(parent = e1) ##创建新环境e2，其父环境是e1
+e1
+e2
+
+##可以使用parent.env查看环境的父环境
+parent.env(e2)
+##可以看到和e1的内存地址一样
+```
+
+需要注意的是：只有环境访问函数(exists/get)会沿着环境链寻找变量，操作符($/[])不会.
+
+```{r ex10,error=TRUE}
+e2$y <- 2
+ls(e2)
+e2[["y"]]
+e2$y
+
+exists("y",e2)
+exists("x",e2)##x在e2中并没有，但是exists会到e2的父环境e1中找到x
+get("x",e2)
+
+e2[["x"]]
+e2$x
+
+##我们也可以让这些函数不去在父环境中寻找，加上参数inherits = FALSE
+exists("x",e2,inherits = FALSE)
+get("x",e2,inherits = FALSE)
+```
+
+当每次开启一个新的R会话时工作环境都会时R的一个内置环境，即全局环境(R_GlobalEnv)：
+
+```{r ex12}
+environment()##使用environment()查看当前工作环境
+
+##还可以通过其他方式访问全局环境
+globalenv()
+.GlobalEnv
+```
+
+那么全局环境的父环境是什么？全局环境的父环境的父环境是什么？最终有没有尽头呢？
+我们可以通过下面的函数来探索一下：
+
+```{r ex13,error=TRUE}
+parents <- function(env){
+  while(TRUE){
+    name <- environmentName(env)
+    txt <- if (nzchar(name)){
+      name
+    }else{
+      format(env)
+    }
+    cat(txt,"\n")
+    env <- parent.env(env)
+  }
+}
+
+parents(globalenv())
+```
+
+可以看到这个环境链条从空环境起始经过多个拓展包的环境最后终止于空环境，并且空环境没有父环境，这个结果和search(搜索路径)的结果相似：
+
+```{r ex14}
+search()
+```
+
+需要注意的是：我们每加载一个包，该包的环境就会加到全局路径的后面，所以如果需要调用两个包中同名函数，会优先选取后加载的包的函数(后加载的包mask了前面包的同名函数)：
+
+```{r ex15,message=FALSE}
+library(dplyr)
+search()
+
+library(data.table)
+search()
+
+##可以看到data.table到前面去了
+```
+
+
+### 引用语义
+
+引用语义指的是：修改环境并不会复制环境的副本(也就是没有复制修改机制)：
+
+```{r ex11}
+e3 <- e1
+e1$x
+e3$x
+
+e3$x <- 2
+e1$x
+##因此e3和e1指向同一个对象，改变e3中的变量值，e1中的变量值也会改变
+```
+
+### 与函数相关的环境
+
+
 
