--- a/content/post/2021-01-04-r-inter/index.en.Rmd
+++ b/content/post/2021-01-04-r-inter/index.en.Rmd
@@ -292,5 +292,12 @@ e1$x
 
 ### 与函数相关的环境
 
+有3个与函数及其运行过程相关的环境：
+
+- 执行环境(executing environment): 每次函数执行时，R都会新建一个环境来管理函数的执行过程，所以函数的参数和在函数内部创建的变量都是执行环境中的变量
+- 封闭环境(enclosing environment)：定义函数的环境，也是执行环境的父环境，所以在函数执行的时候，没有在执行环境中找到的变量就会到其父环境，也就是封闭环境中寻找(词法作用域)
+- 调用环境(calling environment): 调用函数的环境，可以使用parent.frame()来获取调用环境
+
+
 
 
