--- a/content/post/2021-01-14-r-program-ch9/index.zh-cn.Rmd
+++ b/content/post/2021-01-14-r-program-ch9/index.zh-cn.Rmd
@@ -2,7 +2,7 @@
 title: 【R语言编程指南】元编程
 author: wutao
 date: '2021-01-14'
-slug: index.zh-cn
+slug: meta_r_prom
 categories:
   - R
 tags:
@@ -144,5 +144,12 @@ combine(product,3,4,5)
 
 ```
 
+我们经常使用的apply函数族就是高阶函数，接受其他的函数作为参数：
+```{r ex9}
+sapply(1:3,addn(3))
+```
 
+## 基于语言的计算(元编程)
 
+元编程可以允许我们调整语言本身，使特定的语言结构在特定情况下更方便使用(不是很懂)
+先来看一个元编程的用处：
