--- a/content/post/2021-01-14-r-program-ch9/index.zh-cn.Rmd
+++ b/content/post/2021-01-14-r-program-ch9/index.zh-cn.Rmd
@@ -153,3 +153,127 @@ sapply(1:3,addn(3))
 
 元编程可以允许我们调整语言本身，使特定的语言结构在特定情况下更方便使用(不是很懂)
 先来看一个元编程的用处：
+
+```{r ex10,error=TRUE}
+###将iris数据集中数值列的大于80%分位数的数挑出来
+iris[iris$Sepal.Length > quantile(iris$Sepal.Length,0.8),
+     iris$Sepal.Width > quantile(iris$Sepal.Width,0.8),
+     iris$Petal.Length > quantile(iris$Petal.Length,0.8),
+     iris$Petal.Width > quantile(iris$Petal.Width,0.8)]
+
+##上面的代码就比较繁琐，需要多次写iris$
+##subset函数可以简化上述代码
+subset(iris,
+       Sepal.Length > quantile(Sepal.Length,0.8) &
+       Sepal.Width > quantile(Sepal.Width,0.8) &
+       Petal.Length > quantile(Petal.Length,0.8) &
+       Petal.Width > quantile(Petal.Width,0.8))
+
+
+###但是下面的代码就不能运行：
+iris[Sepal.Length > quantile(Sepal.Length,0.8) &
+     Sepal.Width > quantile(Sepal.Width,0.8) &
+     Petal.Length > quantile(Petal.Length,0.8) &
+     Petal.Width > quantile(Petal.Width,0.8)]
+
+```
+
+这是因为subset函数使用**元编程调整了其参数的计算环境**(也就是不是去全局环境寻找这些变量，所以不会产生后面那样的报错)，这个过程分为两步：*捕获表达式；调整表达式的计算(修改计算的环境等)*
+
+### 捕获表达式
+捕获表达式指的是：将表达式本身存储为变量的形式，防止表达式的直接执行(执行了还修改什么)；使用函数quote()
+
+```{r ex11}
+call1 <- quote(rnorm(5))
+call1
+
+typeof(call1)
+class(call1)
+
+name1 <- quote(rnorm)
+name1
+
+typeof(name1)
+class(name1)
+```
+可以看到当我们捕获一个函数调用的时候返回的是一个语言对象(language)/函数调用(call),当捕获一个函数名(变量名)返回的是符号(symbol)/名称(name) \       
+因此这里面我们需要区分的是：  
+
+- 变量和符号对象：变量表示的是一个对象的名称，而这个名称本身也是一个对象，这个对象就是符号对象 \            
+- 函数和调用对象：函数是可以被调用(计算)的对象，而调用对象是函数调用的语言对象，是不会被计算的
+
+可以将对象转化成列表以便查看其内部结构：
+```{r ex12}
+as.list(call1)
+
+typeof(call1[[1]])
+class(call1[[1]])
+
+typeof(call1[[2]])
+class(call1[[2]])
+```
+符号对象和调用对象都是语言对象，可以使用is.symbol/is.name检查对象是否为符号对象，使用is.call()检查是否为调用对象；也可以使用is.language()同时检查：
+```{r ex13}
+is.call(call1)
+is.call(name1)
+is.symbol(name1)
+is.symbol(call1)
+
+is.language(call1)
+is.language(name1)
+```
+捕获已知的表达式可以使用quote()，但是需要捕获用户输入的参数就不行了:
+```{r ex14}
+func1 <- function(x){
+  quote(x)
+}
+
+func1(rnorm(5))
+
+```
+这个时候可以使用函数substitute,substitute基本用法为：substitute(expr, env),expr为表达式，env为环境或者列表，默认是当前的执行环境,*将表达式中的变量替换成环境中的值*：
+```{r ex15}
+fun2 <- function(x){
+  substitute(x)##默认是当前的执行环境
+}
+
+fun2(rnorm(5))
+
+##substitute 用法
+substitute(x+y,list(x=1))
+
+substitute(f(x+f(y)),list(f = quote(sin)))
+```
+除了将表达式捕获为语言对象之外，还可以直接创建语言对象:
+```{r ex17}
+##quote捕获
+call2 <- quote(rnorm(5,mean = 3))
+
+call3 <- call("rnorm",5,mean=3)
+call3
+
+call4 <- as.call(list(quote(rnorm),5,mean=3))
+call4
+
+identical(call3,call4)
+identical(call2,call3)
+
+```
+
+
+
+### 修改表达式
+
+当一个表达式被捕获为调用对象后，可以将其当作列表来修改:
+```{r ex16}
+call1
+
+##可以修改第一个元素来更改要调用的函数
+call1[[1]] <- quote(runif())
+call1
+##也可以添加新的元素来添加参数
+call1[[3]] <- "min" 
+call1
+```
+
+
