--- a/content/post/2021-01-16-python-base/index.zh-cn.Rmd
+++ b/content/post/2021-01-16-python-base/index.zh-cn.Rmd
@@ -13,3 +13,5 @@ image : "python.jpg"
 ![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210118230926897.png)
 
 ![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/列表 - 坚果云_00.png)
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/元组 - 坚果云_00.png)
