--- a/content/post/2021-02-04-hands-on-ml-ch3/index.zh-cn.Rmd
+++ b/content/post/2021-02-04-hands-on-ml-ch3/index.zh-cn.Rmd
@@ -41,10 +41,10 @@ data = np.loadtxt("../test/mnist_784.csv",delimiter=",",skiprows=1)
 
 data.shape
 
-###data without lable
-X = data[:,0:784]
-###lable
-y = data[:,784]
+
+X = data[:,0:784]###data without lable
+
+y = data[:,784]###lable
 
 X.shape
 y.shape
@@ -242,12 +242,18 @@ threshold_90_precision = thresholds[np.argmax(precisions >= 0.90)]
 
 
 plt.figure(figsize=(8, 4))            
+```
+
+```{python}
 plot_precision_recall_vs_threshold(precisions, recalls, thresholds)
 plt.plot([threshold_90_precision, threshold_90_precision], [0., 0.9], "r:")      
 plt.plot([-50000, threshold_90_precision], [0.9, 0.9], "r:")          
 plt.plot([-50000, threshold_90_precision], [recall_90_precision, recall_90_precision], "r:")
 plt.plot([threshold_90_precision], [0.9], "ro")                           
 plt.plot([threshold_90_precision], [recall_90_precision], "ro")           
+```
+
+```{python}
 plt.show()
 ```
 
@@ -264,10 +270,16 @@ def plot_precision_vs_recall(precisions, recalls):
     plt.grid(True)
 
 plt.figure(figsize=(8, 6))
+```
+
+```{python}
 plot_precision_vs_recall(precisions, recalls)
 plt.plot([recall_90_precision, recall_90_precision], [0., 0.9], "r:")
 plt.plot([0.0, recall_90_precision], [0.9, 0.9], "r:")
 plt.plot([recall_90_precision], [0.9], "ro")
+```
+
+```{python}
 plt.show()
 ```
 
@@ -308,12 +320,18 @@ def plot_roc_curve(fpr, tpr, label=None):
     plt.ylabel('True Positive Rate (Recall)', fontsize=16)  
     plt.grid(True)
 
-plt.figure(figsize=(8, 6))                                   
+plt.figure(figsize=(8, 6))                  
+```
+
+```{python}
 plot_roc_curve(fpr, tpr)
 fpr_90 = fpr[np.argmax(tpr >= recall_90_precision)]          
 plt.plot([fpr_90, fpr_90], [0., recall_90_precision], "r:") 
 plt.plot([0.0, fpr_90], [recall_90_precision, recall_90_precision], "r:") 
 plt.plot([fpr_90], [recall_90_precision], "ro")               
+```
+
+```{python}
 plt.show()
 ```
 
