--- a/content/post/2021-02-13-python-task1/index.zh-cn.Rmd
+++ b/content/post/2021-02-13-python-task1/index.zh-cn.Rmd
@@ -395,6 +395,340 @@ assert 3 > 6
 
 ## 循环语句
 
+- while 循环
+
+```{python eval=FALSE}
+while expression:
+  code
+```
+
+当expression为真的时候会一直执行缩进语句中的代码
+
+- while-else 循环
+
+```{python eval=FALSE}
+while expression:
+  code1
+else:
+  code2
+```
+
+expression为真，执行code1，为假则执行code2；需要注意的是如果code1中执行了跳出循环的语句，那么不会执行code2中的代码
+
+```{python}
+count = 5 
+
+while count > 6:
+  print("%d is more than 6" % count)
+  count = count - 1
+else:
+  print("%d is not more than 6" % count)
+```
+```{python}
+count = 5 
+
+while count > 4:
+  print("%d is more than 4" % count)
+  count = count - 1
+  break
+else:
+  print("%d is not more than 4" % count)
+```
+
+```{python}
+while count > 4:
+  print("%d is more than 4" % count)
+  count = count - 1
+else:
+  print("%d is not more than 4" % count)
+```
+
+- for 循环
+
+for循环是一个通用的序列迭代器，可以遍历任何可迭代对象(str,list,tuple,dict等)
+
+```{python eval=FALSE}
+for var in object:
+  code
+```
+
+```{python}
+for i in "abcd":
+  print(i,end="\t")
+```
+
+```{python}
+dic = {"a":1,"b":2,"c":3}
+for i in dic:
+  print(i,end=" ")##默认是keys
+```
+
+```{python}
+for i in dic.values():
+  print(i,end=" ")
+```
+
+- for-else 循环
+
+```{python eval=FALSE}
+for var in object:
+  code1
+else:
+  code2
+```
+
+和while-else循环类似，在for循环执行完后执行else下的语句，如果执行了code1中的跳出循环的语句将不会执行code2
+
+- range()函数
+
+range函数的用法为`range(start,stop,step=1)`，可以用来生成从start到stop步长为step的数字序列(注意：不包含stop，左闭右开)
+
+```{python}
+for i in range(1,3):
+  print(i,end=" ")
+```
+
+```{python}
+for i in range(3):##默认为stop
+  print(i,end=" ")
+```
+
+```{python}
+for i in range(1,10,2):
+  print(i,end=" ")
+```
+
+- enumerate()函数
+
+enumerate的用法为`enumerate(seq,start=0)`,seq为可迭代对象，返回的也是一个可迭代对象(数据加上索引，索引默认从0开始，可以通过start参数指定)
+```{python}
+seasons = ['Spring', 'Summer', 'Fall', 'Winter']
+
+seasons_enu = enumerate(seasons)
+print(seasons_enu,type(seasons_enu))
+
+print(list(seasons_enu))
+
+seasons_enu1 = enumerate(seasons,start=1)
+print(list(seasons_enu1))
+```
+
+```{python}
+for i in seasons_enu1:
+  print(i,end=" ")
+```
+
+- break 和 continue 语句
+
+break是跳出整个循环语句，而continue是跳出本次循环
+
+```{python}
+counts = 4
+
+while counts < 7:
+  print("%d is less than 7" % counts)
+  counts = counts +1
+  if counts == 5:
+    break
+  print("i run!")
+
+```
+
+```{python}
+counts = 4
+
+while counts < 7:
+  print("%d is less than 7" % counts)
+  counts = counts +1
+  if counts == 5:
+    continue
+  print("i run!")
+
+```
+
+- pass 语句
+
+pass 是空语句，不做任何操作，起到占位作用(暂时不确定在该位置写什么代码)
 
 ## 异常处理
+
+### Python 标准异常总结
+
+- BaseException：所有异常的 **基类**
+- Exception：常规异常的 **基类**
+- StandardError：所有的内建标准异常的基类
+- ArithmeticError：所有数值计算异常的基类
+- FloatingPointError：浮点计算异常
+- <u>OverflowError</u>：数值运算超出最大限制
+- <u>ZeroDivisionError</u>：除数为零
+- <u>AssertionError</u>：断言语句（assert）失败
+- <u>AttributeError</u>：尝试访问未知的对象属性
+- EOFError：没有内建输入，到达EOF标记
+- EnvironmentError：操作系统异常的基类
+- IOError：输入/输出操作失败
+- <u>OSError</u>：操作系统产生的异常（例如打开一个不存在的文件）
+- WindowsError：系统调用失败
+- <u>ImportError</u>：导入模块失败的时候
+- KeyboardInterrupt：用户中断执行
+- LookupError：无效数据查询的基类
+- <u>IndexError</u>：索引超出序列的范围
+- <u>KeyError</u>：字典中查找一个不存在的关键字
+- <u>MemoryError</u>：内存溢出（可通过删除对象释放内存）
+- <u>NameError</u>：尝试访问一个不存在的变量
+- UnboundLocalError：访问未初始化的本地变量
+- ReferenceError：弱引用试图访问已经垃圾回收了的对象
+- RuntimeError：一般的运行时异常
+- NotImplementedError：尚未实现的方法
+- <u>SyntaxError</u>：语法错误导致的异常
+- IndentationError：缩进错误导致的异常
+- TabError：Tab和空格混用
+- SystemError：一般的解释器系统异常
+- <u>TypeError</u>：不同类型间的无效操作
+- <u>ValueError</u>：传入无效的参数
+- UnicodeError：Unicode相关的异常
+- UnicodeDecodeError：Unicode解码时的异常
+- UnicodeEncodeError：Unicode编码错误导致的异常
+- UnicodeTranslateError：Unicode转换错误导致的异常
+
+异常体系内部有层次关系，Python异常体系中的部分关系如下所示：
+
+
+![](https://img-blog.csdnimg.cn/20200710131404548.png)
+
+
+
+---
+### Python标准警告总结
+
+- Warning：警告的基类
+- DeprecationWarning：关于被弃用的特征的警告
+- FutureWarning：关于构造将来语义会有改变的警告
+- UserWarning：用户代码生成的警告
+- PendingDeprecationWarning：关于特性将会被废弃的警告
+- RuntimeWarning：可疑的运行时行为(runtime behavior)的警告
+- SyntaxWarning：可疑语法的警告
+- ImportWarning：用于在导入模块过程中触发的警告
+- UnicodeWarning：与Unicode相关的警告
+- BytesWarning：与字节或字节码相关的警告
+- ResourceWarning：与资源使用相关的警告
+
+捕获异常可以使用try-except语句：
+
+- try-except语句
+
+```{python eval=FALSE}
+try:
+  code1
+except Exception [as reason]:
+  code2
+```
+
+首先执行code1，如果没有异常发生就忽略code2；如果code1中出现异常，那么就会将异常的类型(见上面的总结)和Exception进行匹配，如果可以匹配上就执行code2,如果不能匹配，异常将传递到上层的try，但是一直没有匹配就会报错
+
+```{python error=TRUE}
+try:
+    f = open('test.txt')
+    print(f.read())
+    f.close()
+except OSError:
+    print('open file error')
+```
+
+```{python error=TRUE}
+try:
+   1 + "p"
+except OSError:
+    print('open file error')
+```
+
+还可以加上as来展示具体的错误信息：
+
+```{python error=TRUE}
+try:
+    f = open('test.txt')
+    print(f.read())
+    f.close()
+except OSError as error:
+    print('open file error, reason is :' + str(error))
+```
+
+try后面可以接上多个except语句，用来处理不同的异常，但是需要注意异常之间的关系(见上面那张图)：
+
+```{python error=TRUE}
+dict1 = {'a': 1, 'b': 2, 'v': 22}
+try:
+    x = dict1['y']
+except LookupError:
+    print('查询错误')
+except KeyError:
+    print('键错误')
+
+```
+
+这里KeyError属于LookupError的子类，LookupError又在前面，所以执行的是LookupError里面的语句，所以在使用多个except语句时，要将最底端的异常放在前面(更加具体)
+
+```{python error=TRUE}
+dict1 = {'a': 1, 'b': 2, 'v': 22}
+try:
+    x = dict1['y']
+except KeyError:
+    print('键错误')
+except LookupError:
+    print('查询错误')
+
+```
+
+一个except语句也可以处理多个异常，将需要处理的异常放在元组中：
+
+```{python}
+try:
+    s = 1 + 'p'
+    f = open('test.txt')
+    print(f.read())
+    f.close()
+except (OSError, TypeError) as error:
+    print('error !, the reason for first error is ：' + str(error))
+```
+
+- try-except-else 语句
+
+```{python eval=FALSE}
+try:
+  code2
+except  Exception [as reason]:
+  code2
+else:
+  code3
+```
+
+如果没有异常则执行code3
+
+- try-except-finally 语句
+
+```{python eval=FALSE}
+try:
+  code2
+except  Exception [as reason]:
+  code2
+finally:
+  code3
+```
+
+无论code1中有没有异常，code3中的代码都会被执行(如果code1中有异常并且不能被except捕获，那么会在运行code3之后报错)
+
+```{python，error=TRUE}
+def divide(x, y):
+    try:
+        result = x / y
+        print("result is", result)
+    except ZeroDivisionError:
+        print("division by zero!")
+    finally:
+        print("executing finally clause")
+        
+divide(2, 1)
+divide(2, 0)
+divide("2", "1")
+```
+
 
