--- a/content/post/2021-02-24-python-task2/index.zh-cn.Rmd
+++ b/content/post/2021-02-24-python-task2/index.zh-cn.Rmd
@@ -11,10 +11,16 @@ tags:
 image : "python.jpg"
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE,eval=FALSE}
 knitr::opts_chunk$set(collapse = TRUE,comment=">>",
                       engine.path = list(python = 'C:\\Users\\16504\\AppData\\Local\\Programs\\Python\\Python38\\python.exe'))
 ```
+
+```{r setup2, include=FALSE,eval=TRUE}
+knitr::opts_chunk$set(collapse = TRUE,comment=">>",
+                      engine.path = list(python = 'C:\\Users\\lenovo\\AppData\\Local\\Programs\\Python\\Python39\\python.exe'))
+```
+
 
 
 Task2 主要包含python主要数据结构：
@@ -132,3 +138,557 @@ x[::-1]
 ```
 
 **浅拷贝与深拷贝**
+
+对于不可变数据类型，深浅拷贝是一样的(内存地址不变)；对于可变数据类型，浅拷贝只拷贝最外层的可变数据结构(内存地址发生改变)，而深拷贝则拷贝每层的可变数据类型，[参考](https://mp.weixin.qq.com/s/e8N-s2w4gYQPKETVH62EAg)
+
+```{python}
+a = [1,2]
+b = 1
+x = [a,2,3]
+y = [b,2]
+
+z = x[:] ##浅拷贝
+k = y[:] ##浅拷贝
+
+import copy
+z_d = copy.deepcopy(x) ##深拷贝
+k_d = copy.deepcopy(y) ##深拷贝
+
+##可变数据类型
+print(id(x),id(z))##不一样
+print(id(x[0]),id(z[0]))##一样
+
+print(id(x),id(z_d))##不一样
+print(id(x[0]),id(z_d[0])) ##不一样
+
+##不可变数据类型
+print(id(y),id(k))##不一样
+print(id(y[0]),id(k[0]))##一样
+
+print(id(y),id(k_d)) ##不一样
+print(id(y[0]),id(k_d[0])) ##一样
+```
+### 常用操作符
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210228094615853.png)
+
+```{python}
+l1 = [1,2,3]
+l2 = [4,5,6]
+l3 = [2,1,3]
+
+print(l1 == l2)
+print(l1 == l3)
+
+print(l1 + l2)
+print(l1 * 3)
+
+print(1 in l1)
+print(0 not in l1)
+```
+### 其他方法
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210228095235247.png)
+
+```{python error=TRUE}
+l1.count(1)
+
+l4 = l1 * 3
+print(l4)
+
+print(l4.index(1))
+print(l4.index(1,2))##从第三个元素开始找
+print(l4.index(1,1,3)) ##在第二到第四个元素范围内找(左闭右开), 但是里面没有，报错
+
+l4.reverse()
+print(l4)
+
+l4.sort()
+print(l4)
+
+l4 = l1 * 3
+sorted(l4)
+print(l4)
+```
+
+## 元组
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/元组 - 坚果云_00.png)
+
+元组和列表类似，不同的是元组是不可变数据类型(但是可以嵌套可变数据类型，可以直接更改其元素)
+
+```{python error=TRUE}
+t1 = (1,2,[1,2,3])
+t1[0] = 2
+
+t1[2][0] = 0
+print(t1)
+```
+
+元组相关的操作符和方法也和列表类似：
+
+```{python}
+t1 = (1,2,3)
+t2 = (4,5,6)
+
+t1 == t2
+
+print(t1 + t2)
+print(t1 * 3)
+
+print(1 in t1)
+print(0 not in t1)
+
+print(t1.count(1))
+print(t1.index(1))
+```
+
+### 元组拆包
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210228103946589.png)
+
+元组拆包(解压)就是将元组拆成单个的元素(结构要和原来的元组相同)
+
+```{python}
+t = (1,2,3,("a","b",["j",9]))
+
+(a,b,c,(d,e,f)) = t
+print(a,b,c,d,e,f,end="\n")
+
+(a,b,c,(d,e,[f,g])) = t
+print(a,b,c,d,e,f,g,end="\n")
+```
+
+如果我们只想要其中几个元素，可以将其他元素赋给`*rest`(通配符)或者`*_`：
+
+```{python}
+(a,*rest,(b,c,[d,e])) = t
+print(a,b,c,d,e,end="\n")
+print(*rest)
+
+(a,*_,(b,c,[d,e])) = t
+```
+
+## 字符串
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210228105301884.png)
+
+如果字符串中出现了一些有特殊含义的字符需要使用`\`对其进行转义，也可以在字符串前面加上`r`来表示原始字符串：
+
+```{python}
+print("a \n b")
+print(r"a \n b")
+
+```
+
+字符串的切片和拼接和列表，元组类似：
+
+```{python}
+s1 = "abcdef"
+
+s1[0:4:2]
+
+print(s1 + "abc")
+print(s1 * 3)
+```
+
+### 常用内置方法
+
+- 大小写的转换：`capitalize`将字符串的第一个字符转换成大写；`lower`将所有字符转换为小写；`upper`将所有字符转换成大写；`swapcase`将大写字符转换成小写，将小写字符转换成大写；`title`将所有单词的首字母转换成大写
+
+```{python}
+s2 = "An apple"
+
+s2.lower()
+s2.upper()
+s2.swapcase()
+s2.title()
+s2.lower().capitalize()
+```
+
+- `count(str, beg= 0,end=len(string))`返回`str`在字符串中出现的次数，可以使用`beg`和`end`参数指定范围,**大小写敏感**
+
+```{python}
+s2.count("A")
+s2.count("A",1,5)
+```
+
+- 检查子字符串：`endswith(str, beg=0,end=len(string))`检查字符串是否以`str`结束；`startswith(substr, beg=0,end=len(string))`检查字符串是否以`str`开头；`find(str, beg=0, end=len(string))`检查`str`是否在字符串中，如果在，返回第一个值的索引，如果不在，返回-1；`rfind(str, beg=0,end=len(string))`类似`find`,不过是从右边开始查找
+
+```{python}
+s3 = "this is a string"
+
+s3.endswith("str")
+s3.endswith("ing")
+s3.startswith("this")
+
+s3.find("str")
+s3.find("stre")
+
+s3.rfind("str")
+
+s3.find("is")
+s3.rfind("is")##从右边
+```
+
+- `isnumeric`检查字符串是不是只包含数字字符
+
+```{python}
+s4 = "123"
+s4.isnumeric()
+
+s4 = s4 + "a"
+s4.isnumeric()
+```
+
+- 对齐并填充：`ljust(width,fillchar)` 将字符串左对齐,并使用fillchar填充到指定的宽度(width)；与之对应的是`rjust(width,fillchar)`右对齐
+
+```{python}
+s4.ljust(8,"*")
+
+s4.rjust(8,"*")
+```
+
+- 截断字符串：`lstrip(char)`去掉字符串左边空格(默认)或者指定字符(char);与之对应的是`rstrip`(右边)和`strip`(左边加右边)
+
+```{python}
+s4 = "  " + s4 + "123  "
+s4
+
+s4.lstrip()
+s4.rstrip()
+s4.strip()
+
+s4 = s4.strip()
+
+s4.strip("123")
+```
+
+- 字符串切割：`partition(sub)`在字符串中找sub字符串，找到之后将原字符串以子字符串分成3部分，如果找不到返回原字符串加上`, `;`rpartition(sub)`和`partition`类似，不过是从右边开始寻找，**注意：这里的寻找只找第一个，所以两者的结果可能不同**; `split(str=" ",num)`以str为分隔符切割字符串，可以指定分割产生的子字符串的个数，返回子字符串构成的列表
+
+```{python}
+s5 = 'abc123abc'
+print(s5.partition('b'))
+print(s5.rpartition('b'))
+```
+
+```{python}
+s5.split("b")##分隔符是b
+s5.split("b",1)#num指定的是"切割"的次数
+```
+
+- `replace(old,new,max)`将字符串中old子字符串替换成new新字符串，可以通过max指定替换的最大次数
+
+```{python}
+s5.replace("bc","**",1)
+s5.replace("bc","**")
+```
+
+- `splitlines(keepends)` 按行分割字符串，返回各行构成的列表(分割符可以为'\r', '\r\n', \n')；可以通过keepends来指定是否保留分隔符
+
+```{python}
+s6 = "abc\n123\rbcd\r\n000"
+print(s6)
+
+s6.splitlines()
+s6.splitlines(keepends=True)
+```
+
+- 字符串的转化：`maketrans(intab,outtab)`创建intab到outtab的映射；`translate(table,deletechars="")`根据table来进行转化，可以使用`deletechars`来指定删除的字符
+
+```{python}
+s7 = "abc has three characters"
+
+intab = "abc"
+outtab = "123"
+
+transtab = s7.maketrans(intab,outtab)
+transtab ###ASCII对应
+
+s7.translate(transtab)
+```
+
+### 字符串格式化
+
+- format 方法 在字符串中使用括号表示format的参数，进行替换；括号内的数字表示位置，字母表示参数名称
+
+```{python}
+"{1} is {0}".format("num","1")
+
+"{second} is {first}".format(first = "num", second = "1")
+```
+
+- 字符串格式化符号
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210228162350177.png)
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210228162434625.png)
+
+- f字符串：在需要格式化的字符串前面加上f或F，里面用大括号来代替变量
+
+```{python}
+a = "'123'"
+b = "'cdf'"
+
+f"{a} has the same length with {b}"
+
+```
+
+## 字典
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/字典 - 坚果云_00.png)
+
+### 创建字典
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210228162934647.png)
+```{python}
+d1 = {"a":1,"b":2,"c":3}
+print(d1,type(d1))
+```
+
+```{python}
+##先创建空字典再填充
+d2 = dict()
+d2["a"] = 1
+d2["b"] = 2
+print(d2,type(d2))
+
+##根据可映射对象来创建
+o1 = [("a",1),("b",2)]
+o2 = (("c",1),("d",2))
+
+d3 = dict(o1)
+d4 = dict(o2)
+
+print(d3,type(d3))
+print(d4,type(d4))
+
+##根据关键字参数来创建
+d5 = dict(a=1,b=2)
+print(d5,type(d5))
+```
+
+还可以使用`fromkeys(seq,value)`方法来创建；以seq中的元素做键，value作为值(所有的键的值都是value，如果没有则为None)
+
+```{python}
+seq = ("a","b","c")
+dict.fromkeys(seq)
+
+dict.fromkeys(seq,10)
+
+dict.fromkeys(seq,(1,2,3)) ##不会分开匹配
+```
+
+### 访问字典
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210228163808865.png)
+`keys`方法返回一个可迭代对象(键)，可以使用`list()`来转化为列表
+
+```{python}
+d5
+d5.keys()
+type(d5.keys())
+
+list(d5.keys())
+```
+
+同样的，`values`方法返回的是包含值的可迭代对象：
+
+```{python}
+d5
+d5.values()
+type(d5.values())
+
+list(d5.values())
+```
+
+`items`方法返回的是键值对元组构成的可迭代对象：
+
+```{python}
+d5.items()
+type(d5.items())
+
+list(d5.items())
+```
+
+`get(key,default=None)`方法返回指定键(key)的值，如果没有找到则返回默认值(default)
+
+```{python}
+d5.get("a")
+
+d5.get("c")##返回None 什么都没有
+
+d5.get("c","not in dict")
+```
+
+### 修改,添加,删除元素
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210228165518914.png)
+`update(dict2)`方法将dict2中的键值对更新到字典中
+
+```{python}
+d5
+
+d5.update({"a":4})
+d5
+```
+
+`setdefault(key,default=None)`方法和get类似，不过他如果没有找到键的话会添加键，并将值设为default(和get一样也会返回default值)
+
+```{python}
+d5.setdefault("c",5)
+d5
+```
+
+删除元素有3种方法：`pop(key,default)`方法删除键(key)所对应的值并返回该值，如果key不存在则返回default；`del dict[key]`语句删除key对应的值；`clear`方法删除所有元素
+
+```{python}
+d5.pop("a")
+d5
+
+d5.pop("a","not in dict")
+
+del d5["b"]
+d5
+
+d5.clear()
+d5
+```
+## 集合
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/集合.nbmx - 坚果云_00.png)
+
+### 集合的创建
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210228185240284.png)
+
+注意：在创建空集合的时候只能使用`set()`而不能使用`{}`，因为`{}`创建的是空字典
+
+```{python}
+set1 = set()
+
+set1.add("a")
+set1
+set1.add(("a","b"))
+set1
+
+###直接创建
+set2 = {"a","b","c","a"}
+set2
+
+###将列表/元组/字符串转化成集合
+set("abc")
+
+set(("a","b","c"))
+
+set(["a",1,2])
+```
+
+### 添加,删除,修改元素
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210228185911041.png)
+```{python error=TRUE}
+set3 = {"a","b","c"}
+set3
+
+set3.add("d")
+set3
+
+set3.add("a")##相同元素 不执行操作
+set3
+
+###update 更新集合 和前面讲的类似，不同的是集合中的元素唯一
+set3.update("b","e")
+set3
+
+###remove移除指定元素
+set3.remove("a")
+set3
+
+###discard也是移除元素，但是元素不存在不会报错
+set3.remove("a")
+set3.discard("a")
+
+set3
+
+###pop随机移除
+set3.pop()
+set3
+```
+
+### 集合操作
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210228190454050.png)
+`intersection(set1, set2)` 返回两个集合的交集,也可以使用`&`,`intersection_update(set1, set2)`取交集并更新原来的集合(相当于将原来集合中不重叠的元素删除)
+
+```{python}
+a = set("abcd")
+b = set("cdef")
+
+print(a,b,end="\n")
+
+a.intersection(b)
+print(a,b,end="\n")##原来的集合没有改变
+
+a.intersection_update(b)
+print(a,b,end="\n")##原来的集合改变
+```
+
+union(set1, set2) 返回两个集合的并集,也可以使用`|`
+
+```{python}
+a.union(b)
+a | b
+```
+
+difference(set) 返回集合的差集,也可以使用`-`,difference_update(set)更改原来的集合
+
+```{python}
+a.difference(b)
+b.difference(a)
+
+a-b
+b-a
+
+b.difference_update(a)
+print(a,b)
+
+```
+
+symmetric_difference(set)返回集合的异或，或者使用`^`
+
+集合的异或指的是：(参考https://www.cnblogs.com/organic/p/5023038.html)下图绿色的部分
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/818872-20151206095708736-923889139.png)
+
+```{python}
+a = set("abcd")
+b = set("cdef")
+
+print(a,b,end="\n")
+
+a.symmetric_difference(b)
+a.symmetric_difference_update(b)
+print(a,b,end="\n")
+```
+
+issubset(set)判断集合是否被set包含，也可以使用`<=`;issuperset(set)判断集合是否包含set，也可以使用`>=`
+
+```{python}
+c = set("ab")
+
+c.issubset(a)
+c <= a
+a.issuperset(c)
+a >= c
+```
+isdisjoint(set) 用于判断两个集合是不是不相交
+
+```{python}
+a.isdisjoint(b)
+```
+
+
+
+
+
